homework/5.kubernetes-network/redmine-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
          protocol: TCP
